# tech-challenge

./: README.md
answers/q1/: README.md
answers/q2/: README.md
answers/q3/: README.md
answers/q4/: README.md
answers/q5/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
answers/q5/alembic/: env.py
answers/q5/alembic/versions/: f13616e408f5_init_schema.py
answers/q5/app/: config.py  main.py
answers/q5/app/core/: logging.py
answers/q5/app/core/utils/: passwords.py
answers/q5/app/domain/entities/: user.py
answers/q5/app/domain/repositories/: user_repository.py
answers/q5/app/domain/security/: password_hasher.py
answers/q5/app/domain/value_objects/: email.py
answers/q5/app/infra/db/sqlalchemy/: db.py  seed_roles.py
answers/q5/app/infra/db/sqlalchemy/mappers/: user_mapper.py
answers/q5/app/infra/db/sqlalchemy/models/: claim.py  role.py  user.py  user_claim.py
answers/q5/app/infra/db/sqlalchemy/repositories/: user_repository.py
answers/q5/app/infra/http/health/: controller.py  presenter.py
answers/q5/app/infra/http/users/: controller.py  dto.py  mappers.py  presenter.py
answers/q5/app/infra/security/: bcrypt_hasher.py
answers/q5/app/use_cases/: create_user.py
answers/q5/tests/: test_create_user_usecase.py  test_password_generator.py  test_users_api.py
answers/q6/: README.md  bot_review.py
answers/q7/: README.md
